Ensure hero header content is always aligned to bottom of container.

--- a/scss/_regions/_header.scss
+++ b/scss/_regions/_header.scss
@@ -123,6 +123,8 @@
 
   // Hero image header banner styling.
   &.-hero {
+    display: table;
+    width: 100%;
     min-height: 465px;
     padding-top: 216px;
     padding-bottom: 28px;
@@ -153,6 +155,9 @@
     }
 
     > .wrapper {
+      display: table-cell;
+      vertical-align: bottom;
+
       @include media($tablet) {
         bottom: 27px;
         position: absolute;
